# zk-aptos-light-client

./: Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: lib.rs
core/src/aptos_test_utils/: error.rs  mod.rs  wrapper.rs
core/src/crypto/: error.rs  hash.rs  mod.rs  sig.rs
core/src/merkle/: mod.rs  node.rs  sparse_proof.rs  transaction_proof.rs
core/src/types/: block_info.rs  epoch_state.rs  error.rs  ledger_info.rs  mod.rs  output.rs  transaction.rs  trusted_state.rs  utils.rs  validator.rs  waypoint.rs
guests/: Cargo.toml
guests/epoch-change/: Cargo.toml
guests/epoch-change/src/: main.rs
guests/inclusion/: Cargo.toml
guests/inclusion/src/: main.rs
host/: Cargo.toml
host/benches/: epoch_change.rs  inclusion.rs  proof_server.rs
host/src/: aptos.rs  epoch_change.rs  error.rs  inclusion.rs  lib.rs  types.rs
