[package]
name = "aptos-lc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.79" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
bls12_381 = { version = "0.8.0", features = ["experimental"] }
bytes = { version = "1.5.0", features = ["serde"] }
cfg-if = { version = "1.0.0"}
getset = { version = "0.1.2" }
hex = { version = "0.4.3" }
serde = { version = "1.0.210" }
serde_bytes = { version = "0.11.15" }
sha2 = { version = "0.9" }
thiserror = { version = "1.0.58"}
tiny-keccak = { version = "2.0.2", features = ["sha3"] }

aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0", optional = true }
aptos-executor = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0", optional = true }
aptos-executor-test-helpers = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0", optional = true }
aptos-executor-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0", optional = true }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0", optional = true }
aptos-storage-interface = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0", optional = true }
aptos-temppath = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0", optional = true }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0", optional = true }
aptos-vm = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0", optional = true }
aptos-vm-genesis = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0", optional = true }

rand = { version = "0.7.3", optional = true }
rand_core = { version = "0.5.1", optional = true }

[dev-dependencies]
cfg-if = { version = "1.0.0" }
proptest = { version = "1.4.0" }

[features]
default = []
aptos = [
    "dep:aptos-crypto",
    "dep:aptos-executor",
    "dep:aptos-executor-test-helpers",
    "dep:aptos-executor-types",
    "dep:aptos-sdk",
    "dep:aptos-storage-interface",
    "dep:aptos-temppath",
    "dep:aptos-types",
    "dep:aptos-vm",
    "dep:aptos-vm-genesis",
    "dep:rand",
    "dep:rand_core"
]
waypoint = []

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
