[package]
name = "inclusion"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }
aptos-lc-core = { path = "../../core", package = "aptos-lc-core", default-features = false }

[profile.release]
codegen-units = 1
panic = "abort"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }